# bazel-vite

./: .gitignore  BUILD.bazel  WORKSPACE  package.json  vite.bzl
src/: App.tsx
